--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,46 +3,42 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Chris Mlynarski's Portfolio {{ page.pretty_title }} Page</title>
+    <title>{{ page.pretty_title }}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <!-- AOS Animation CSS Library -->
+    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="{{ site.baseurl }}/node_modules/aos/dist/aos.css" />
-
     <link href="{{ site.baseurl }}/css/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
-            <!-- Removing background for minimal theme -->
-            <!-- <div class="background {{ page.title }}-background"></div> -->
+    <!-- Removing background for minimal theme -->
+    <!-- <div class="background {{ page.title }}-background"></div> -->
 
-            {% include nav.html %}
+    {% include nav.html %}
 
-            {{ content }}
-            
-            {% include footer.html %}
+    {{ content }}
+    
+    {% include footer.html %}
 
-            <!-- AOS Animation JS Library and Global Settings -->
-            <script src="{{site.baseurl }}/node_modules/aos/dist/aos.js"></script>
-            <script>
-                AOS.init({
-                    offset: 40,
-                    once: true,
-                    disable: window.innerWidth < 1024,
-                });
-            </script>
-            
-            <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-            <script>
-                (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-                    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-                e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-                e.src='https://www.google-analytics.com/analytics.js';
-                r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-                ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-            </script>
-        </body>
-        </html>
+    <!-- AOS Animation JS Library and Global Settings -->
+    <script src="{{site.baseurl }}/node_modules/aos/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 40,
+            once: true,
+            disable: window.innerWidth < 1024,
+        });
+    </script>
+    
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='https://www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    </script>
+</body>
+</html>
