--- a/sass/_project.scss
+++ b/sass/_project.scss
@@ -11,6 +11,7 @@
  	}
  }
 
+
 /* ---------------------------------------------------------------------
  Breadcrumb
  ------------------------------------------------------------------------ */
@@ -42,6 +43,7 @@
  	}
  }
 
+
 /* ---------------------------------------------------------------------
  Images (Mobile-first)
  ------------------------------------------------------------------------ */
@@ -70,11 +72,8 @@
  		img[data-aos="fade"] {
  			@include transition-property(all);
  		}
-
  	}
  }
-
-
 
 
  /* ---------------------------------------------------------------------
@@ -84,6 +83,14 @@
  .description-container {
  	@include span(4 last);
  	margin-bottom: 24px;
+
+ 	p {
+ 		margin-bottom: 16px;
+
+ 		&:last-child {
+ 			margin-bottom: 0;
+ 		}
+ 	}
  } 	
 
  .project-title {
@@ -114,6 +121,7 @@
  		@include span(12);
  	}
  }
+
 
 /* ---------------------------------------------------------------------
  Links Container
