--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -2,20 +2,21 @@
  Page Container
  ------------------------------------------------------------------------ */
 
- .about_page-container {
+ .about-page-container {
  	@include container($max-width);
- 	padding: 32px 0 120px 0;
+ 	padding: 56px 0 120px 0;
 
  	@media (max-width: $medium-break) {
- 		padding: 24px 0 32px 0;
+ 		padding: 24px 0 48px 0;
  	}
  }
+
 
 /* ---------------------------------------------------------------------
  Image Container
  ------------------------------------------------------------------------ */
 
- .about_image-container {
+ .about-image-container {
  	@include span(5.5 last);
  	margin-bottom: 40px;
 
@@ -27,10 +28,11 @@
  /*Full width at small breakpoint*/
 
  @media (max-width: $medium-break) {
- 	.about_image-container {
+ 	.about-image-container {
  		@include span(12);
  	}
  }
+
 
 /* ---------------------------------------------------------------------
  About Blurb
@@ -40,13 +42,18 @@
  	@include span(5.5);
 
  	h3 {
- 		margin-bottom: 40px;
+ 		margin-bottom: 2rem;
  	}
 
+ 	p {
+ 		margin-bottom: 16px;
 
- 	@media (max-width: $medium-break) {
- 		h3 {
- 			margin-bottom: 16px; 	
+ 		&:nth-last-child(2) {
+ 			margin-bottom: 24px;
+ 		}
+
+ 		&:last-child {
+ 			margin-bottom: 0;
  		}
  	}
  }
