--- a/sass/_project.scss
+++ b/sass/_project.scss
@@ -95,11 +95,12 @@
 
  .project-title {
  	margin-bottom: 2rem;
+ 	line-height: 34px;
  }
 
  .project-description {
  	display: flex;
- 	margin-bottom: 13px;
+ 	margin-bottom: 10px;
 
  	h4 {
  		margin-right: 4px;
