bug fixes and content tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 		<div class="footer-container">
 			<div class="footer-content footer-border">
 				<div class="footer-wrapper">
-					<p class="footer-item">Chris Mlynarski©</p>
+					<p class="footer-item">Built and designed by Chris Mlynarski, Copyright 2017</p>
 					<div class="icons-container">
 						{% include social_icons.html %}
 					</div>
