--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -37,7 +37,7 @@ layout: default
 	{% assign next = page.order | plus: 1 %}
 	{% for projects in site.pages %}
 		{% if projects.order == next %}
-			<a class="single-link-container" href="{{ site.baseurl }}/{{ projects.url }}"><p class="project-link">Next</p>{% include right_arrow.html %}</a>
+			<a class="single-link-container" href="{{ site.baseurl }}{{ projects.url }}"><p class="project-link">Next</p>{% include right_arrow.html %}</a>
 		{% endif %}
 	{% endfor %}
 	</div>
