fixing url issues

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -31,13 +31,13 @@ layout: default
 	{% assign previous = page.order | minus: 1 %}
 	{% for projects in site.pages %}
 		{% if projects.order == previous %}
-			<a class="single-link-container" href="{{ site.baseurl }}{{ projects.url }}">{% include left_arrow.html %}<p class="project-link">Previous</p></a>
+			<a class="single-link-container" href="{{ site.url }}{{ projects.url }}">{% include left_arrow.html %}<p class="project-link">Previous</p></a>
 		{% endif %}
 	{% endfor %}
 	{% assign next = page.order | plus: 1 %}
 	{% for projects in site.pages %}
 		{% if projects.order == next %}
-			<a class="single-link-container" href="{{ site.baseurl }}{{ projects.url }}"><p class="project-link">Next</p>{% include right_arrow.html %}</a>
+			<a class="single-link-container" href="{{ site.url }}{{ projects.url }}"><p class="project-link">Next</p>{% include right_arrow.html %}</a>
 		{% endif %}
 	{% endfor %}
 	</div>
